--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
-
-*, *:before, *:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-:focus, :active {
-  outline: none;
-}
-
-a:focus, a:active {
-  outline: none;
-}
-
-button {
-  cursor: pointer;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-a, a:visited {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-ul, li {
-  list-style: none;
-}
-
-nav, footer, header, aside {
-  display: block;
-}
-
-input, button, textarea {
-  font-family: inherit;
-}
-
-button {
-  background-color: transparent;
-  border: none;
-}
-
 @font-face {
   font-family: "TTLakes";
   src: url(/fonts/TTLakes-Regular.eot);
@@ -72,8 +19,72 @@ button {
   font-weight: 700 bold;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+:focus,
+:active {
+  outline: none;
+}
+
+a:focus,
+a:active {
+  outline: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+}
+
 body {
-  background-color: #F8F8F8;
+  background-color: #f8f8f8;
   font-family: "TTLakes";
 }
 
@@ -81,8 +92,8 @@ body {
   min-width: 320px;
   min-height: 80px;
   padding: 16px;
-  background: -webkit-gradient(linear, right top, left top, from(#F8F8F8), color-stop(98.61%, #FFFFFF));
-  background: linear-gradient(270deg, #F8F8F8 0%, #FFFFFF 98.61%);
+  background: -webkit-gradient(linear, right top, left top, from(#f8f8f8), color-stop(98.61%, #ffffff));
+  background: linear-gradient(270deg, #f8f8f8 0%, #ffffff 98.61%);
   -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
           transform: matrix(-1, 0, 0, 1, 0, 0);
 }
@@ -106,7 +117,7 @@ body {
   line-height: 24px;
   letter-spacing: -0.2px;
   text-transform: uppercase;
-  color: #7E7E82;
+  color: #7e7e82;
   -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
           transform: matrix(-1, 0, 0, 1, 0, 0);
 }
@@ -116,7 +127,7 @@ body {
 }
 
 .brands-buttons__pagination .swiper-pagination-bullet {
-  background-color: #B5B6BC;
+  background-color: #b5b6bc;
   width: 12px;
   height: 12px;
 }
@@ -201,7 +212,7 @@ body {
   font-weight: 500;
   line-height: 24px;
   letter-spacing: -0.2px;
-  color: #1B1C21;
+  color: #1b1c21;
 }
 
 .inverted {
@@ -209,10 +220,6 @@ body {
           transform: rotate(180deg);
 }
 
-.brands-buttons__container .swiper-slide {
+.brands-buttons__container.swiper-slide {
   width: auto;
-}
-
-.swiper-slide {
-  min-width: 0;
 }
