--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,22 +1,22 @@
 @font-face {
   font-family: "TTLakes";
-  src: url(/fonts/TTLakes-Regular.eot);
+  src: url("../fonts/TTLakes-Regular.woff") format("woff");
+  font-weight: 400;
   font-style: normal;
-  font-weight: 400 normal;
 }
 
 @font-face {
   font-family: "TTLakes";
-  src: url(/fonts/TTLakes-Medium.eot);
-  font-style: normal;
+  src: url("../fonts/TTLakes-Medium.woff") format("woff");
   font-weight: 500;
+  font-style: normal;
 }
 
 @font-face {
   font-family: "TTLakes";
-  src: url(/fonts/TTLakes-Bold.eot);
+  src: url("../fonts/TTLakes-Bold.woff") format("woff");
+  font-weight: 700;
   font-style: normal;
-  font-weight: 700 bold;
 }
 
 * {
@@ -31,14 +31,7 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-:focus,
-:active {
-  outline: none;
-}
-a:focus,
-a:active {
-  outline: none;
-}
+
 button {
   cursor: pointer;
 }
